# cc-thingz

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  agentbundle.json  gemini-extension.json  package.json  pyproject.toml  tsconfig.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex/agents/: advisor.toml  reviewer.toml  runner.toml
.cursor-plugin/: marketplace.json
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  mirror-cc-forge.yml  release.yml  rewrite-mirror.yml
.pi-subagents/artifacts/: b3cb17d3-7236-4ef6-980e-bea49c906553_oracle_input.md  b3cb17d3-7236-4ef6-980e-bea49c906553_oracle_meta.json  (+2 more)
docs/: agentbundler-gaps.md  instruction-lint-rules.md  pi-extensions.md  root-compatibility.md  skill-evals.md  skill-format.md  skills-audit-2026-05-17.md  spec-flow.md
scripts/: lint-instructions.py  validate-config.py
tests/: conftest.py  test_agentbundler_hooks.py  test_agentbundler_release.py  test_bq_cost_check_script.py  test_ci_smoke.py  test_cleanup_git_script.py  test_cleanup_worktree_script.py  test_codex_toml.py  test_commit_state_script.py  test_compile_agent.py  test_compile_batch1_skills.py  test_compile_batch2_skills.py  test_compile_hook.py  test_compile_hook_pipeline.py  test_compile_skill.py  test_compile_writing_skills.py  test_generate_release_notes.py  test_lint_instructions.py  test_looking_up_docs_skill.py  test_no_mcp_sequential_thinking_in_plugins.py  test_overlay_body_mirror.py  test_overlay_frontmatter.py  test_playwright_skill_scripts.py  test_plugin_index.py  test_prepare_skill_evals.py  test_python_style_policy.py  test_root_compatibility.py  test_setup_worktree_script.py  test_specctl.py  test_summarize_skill_evals.py  test_validate_genericity.py
(+361 files in other folders)
