[project]
name = "cc-thingz"
version = "6.8.1"
description = "Portable skills, agents, hooks, and Pi extensions for coding agents."
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["scripts"]
branch = true
omit = ["scripts/git-hooks/*", "scripts/release/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
# Keep below py314. Ruff py314 applies PEP 758 and removes parentheses
# from multi-type except clauses; repo policy requires except (A, B):.
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
